# wechat-emma

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/skills/wxemma-multi-wechat/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/specs/: 2026-07-06-wechat-emma-design.md
docs/superpowers/plans/: 2026-07-06-wechat-emma.md
locales/: en.yml  zh-CN.yml
packaging/: wxemma.rb.tmpl
src/: banner.rs  cli.rs  config.rs  data.rs  entitlements.rs  error.rs  help.rs  i18n.rs  instance.rs  lib.rs  main.rs  output.rs  plist_edit.rs  sysops.rs
src/commands/: context.rs  mod.rs
tests/: commands.rs
